<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">pedro_s_application3</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_email">Email</string>
  <string name="lbl_123123123123">123123123123</string>
  <string name="lbl_herpangina">HERPANGINA</string>
  <string name="lbl_cro_matr_cula">CRO/Matrícula</string>
  <string name="lbl_p_n_figo">PÊN
FIGO</string>
  <string name="lbl_nova_senha">Nova Senha</string>
  <string name="lbl_leucoplasia">LEUCOPLASIA</string>
  <string name="lbl_bem_vindo">Bem vindo!</string>
  <string name="lbl_n_mero_atual">Número Atual</string>
  <string name="lbl_cadastre_se">Cadastre-se!</string>
  <string name="lbl_herpes">HERPES</string>
  <string name="lbl_99_9_9999_9999">99 9 9999-9999</string>
  <string name="lbl_cadastrar">Cadastrar</string>
  <string name="lbl_cancelar">Cancelar</string>
  <string name="lbl_salvar">Salvar</string>
  <string name="msg_a_senha_precisa">A senha precisa ter 6 dígitos e entre eles letras e números.</string>
  <string name="lbl_repetir_senha">Repetir senha</string>
  <string name="lbl_nome">Nome</string>
  <string name="msg_esqueceu_a_senh">Esqueceu a senha?</string>
  <string name="lbl_email_atual">Email Atual</string>
  <string name="lbl_senha">Senha</string>
  <string name="lbl_fernanda_cabral">Fernanda Cabral</string>
  <string name="msg_pesquisar_patol">Pesquisar Patologias</string>
  <string name="lbl_candid_ase">CANDIDÍASE</string>
  <string name="msg_fernandacabral">FernandaCabral@gmail.com</string>
  <string name="msg_n_o_possui_uma">Não possui uma conta? Cadastre-se!</string>
  <string name="lbl_mucocele">MUCOCELE</string>
  <string name="lbl_afta">AFTA</string>
  <string name="lbl_nova_senha2">Nova senha</string>
  <string name="lbl_nome_atual">Nome Atual</string>
  <string name="msg_n_o_possui_uma2">Não possui uma conta? </string>
  <string name="lbl">******</string>
  <string name="lbl_carcinoma">CARCINOMA</string>
  <string name="lbl_entrar">Entrar</string>
  <string name="msg_a_seu_app_de_a">A seu app de 
atendimento fácil.</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
</resources>
