<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="telaCadastroDrVM" type="com.pedrosapplication.app.modules.telacadastrodr.data.viewmodel.TelaCadastroDrVM"/>
    </data>
    <FrameLayout android:id="@+id/frameTelaCadastroD"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageImagemodonto"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_imagemodonto}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_imagemodonto"/>
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content" android:orientation="vertical">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_gravity="start"
                android:layout_height="@dimen/_41pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_41pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft_green_900"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_green_900"/>
            <TextView android:ellipsize="end" android:gravity="end"
                android:id="@+id/txtBemvindo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{telaCadastroDrVM.telaCadastroDrModel.txtBemvindo}"
                style="@style/txtMontserratextrabold25" tools:text="@string/lbl_bem_vindo"/>
            <TextView android:gravity="end"
                android:id="@+id/txtAseuappdeat"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_38pxh"
                android:layout_marginStart="@dimen/_38pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:text="@{telaCadastroDrVM.telaCadastroDrModel.txtAseuappdeat}"
                style="@style/txtMontserratbold16" tools:text="@string/msg_a_seu_app_de_a"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearCrculo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8pxh"
                android:layout_marginStart="@dimen/_57pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegreen_900cornerRadius">
                <ImageView android:gravity="center_horizontal"
                    android:id="@+id/imageFemaledentist"
                    android:layout_height="@dimen/_199pxh"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_femaledentist}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_femaledentist"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearNome"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNome"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{telaCadastroDrVM.telaCadastroDrModel.txtNome}"
                    style="@style/txtMontserratsemibold12" tools:text="@string/lbl_nome"/>
                <EditText
                    android:background="@drawable/rectangle_bg_green_300_4c_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/lbl_fernanda_cabral"
                    android:id="@+id/etGroupNineteen"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={telaCadastroDrVM.telaCadastroDrModel.etGroupNineteenValue}"
                    android:textColorHint="@color/black_900_96"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearEmail"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{telaCadastroDrVM.telaCadastroDrModel.txtEmail}"
                    style="@style/txtMontserratsemibold12" tools:text="@string/lbl_email"/>
                <EditText
                    android:background="@drawable/rectangle_bg_green_300_4c_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/msg_fernandacabral"
                    android:id="@+id/etEmailOne"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={telaCadastroDrVM.telaCadastroDrModel.etEmailOneValue}"
                    android:textColorHint="@color/black_900_96"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearCRO"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCROMatrcula"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{telaCadastroDrVM.telaCadastroDrModel.txtCROMatrcula}"
                    style="@style/txtMontserratsemibold12" tools:text="@string/lbl_cro_matr_cula"/>
                <EditText
                    android:background="@drawable/rectangle_bg_green_300_4c_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/lbl_123123123123"
                    android:id="@+id/etGroupTwentyOne"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={telaCadastroDrVM.telaCadastroDrModel.etGroupTwentyOneValue}"
                    android:textColorHint="@color/black_900_96"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtSenha"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_52pxh"
                android:layout_marginStart="@dimen/_52pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{telaCadastroDrVM.telaCadastroDrModel.txtSenha}"
                style="@style/txtMontserratsemibold12" tools:text="@string/lbl_senha"/>
            <EditText
                android:background="@drawable/rectangle_bg_green_300_4c_radius_10"
                android:drawableEnd="@drawable/img_vector_green_900"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end" android:hint="@string/lbl"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_18pxh"
                android:paddingStart="@dimen/_19pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@={telaCadastroDrVM.telaCadastroDrModel.etPasswordValue}"
                android:textColorHint="@color/black_900_97"
                style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCadastrar"
                android:layout_gravity="end"
                android:layout_height="@dimen/_45pxv"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="@dimen/_200pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_cadastrar"
                android:textAllCaps="false"
                style="@style/btnSolidRoundedOutline_1" tools:text="@string/lbl_cadastrar"/>
        </LinearLayout>
    </FrameLayout>
</layout>
