<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="telaLoginDrVM" type="com.pedrosapplication.app.modules.telalogindr.data.viewmodel.TelaLoginDrVM"/>
    </data>
    <FrameLayout android:id="@+id/frameTelaLoginDr"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageImagemodonto"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_imagemodonto}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_imagemodonto"/>
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content" android:orientation="vertical">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_gravity="start"
                android:layout_height="@dimen/_41pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_41pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
            <TextView android:ellipsize="end" android:gravity="end"
                android:id="@+id/txtBemvindo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_36pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{telaLoginDrVM.telaLoginDrModel.txtBemvindo}"
                style="@style/txtMontserratextrabold25" tools:text="@string/lbl_bem_vindo"/>
            <TextView android:gravity="end"
                android:id="@+id/txtAseuappdeat"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_37pxh"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:text="@{telaLoginDrVM.telaLoginDrModel.txtAseuappdeat}"
                style="@style/txtMontserratbold16" tools:text="@string/msg_a_seu_app_de_a"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearCrculo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_57pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegreen_300cornerRadius">
                <ImageView android:gravity="center_horizontal"
                    android:id="@+id/imageFemaledentist"
                    android:layout_height="@dimen/_199pxh"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_femaledentist}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_femaledentist"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearNome"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCROMatrcula"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{telaLoginDrVM.telaLoginDrModel.txtCROMatrcula}"
                    style="@style/txtMontserratsemibold12" tools:text="@string/lbl_cro_matr_cula"/>
                <EditText
                    android:background="@drawable/rectangle_bg_green_300_4c_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/lbl_123123123123"
                    android:id="@+id/etGroupOne"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_15pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={telaLoginDrVM.telaLoginDrModel.etGroupOneValue}"
                    android:textColorHint="@color/black_900_96"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearSenha"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSenha"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{telaLoginDrVM.telaLoginDrModel.txtSenha}"
                    style="@style/txtMontserratsemibold12" tools:text="@string/lbl_senha"/>
                <EditText
                    android:background="@drawable/rectangle_bg_green_300_4c_radius_10"
                    android:drawableEnd="@drawable/img_vector"
                    android:drawablePadding="@dimen/_30pxh"
                    android:ellipsize="end" android:hint="@string/lbl"
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_16pxh"
                    android:paddingStart="@dimen/_15pxh"
                    android:paddingTop="@dimen/_11pxv"
                    android:singleLine="true"
                    android:text="@={telaLoginDrVM.telaLoginDrModel.etPasswordValue}"
                    android:textColorHint="@color/black_900_97"
                    style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtEsqueceuasenh"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_178pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{telaLoginDrVM.telaLoginDrModel.txtEsqueceuasenh}"
                style="@style/txtMontserratsemibold10" tools:text="@string/msg_esqueceu_a_senh"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnEntrar" android:layout_gravity="end"
                android:layout_height="@dimen/_45pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_93pxv"
                android:layout_width="@dimen/_194pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_entrar"
                android:textAllCaps="false"
                style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_entrar"/>
            <TextView android:ellipsize="end" android:gravity="end"
                android:id="@+id/txtNopossuiuma"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_52pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{telaLoginDrVM.telaLoginDrModel.txtNopossuiuma}"
                style="@style/txtMontserratsemibold12" tools:text="@string/msg_n_o_possui_uma"/>
        </LinearLayout>
    </FrameLayout>
</layout>
