<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="meusDadosNovaSenhaVM" type="com.pedrosapplication.app.modules.meusdadosnovasenha.data.viewmodel.MeusDadosNovaSenhaVM"/>
    </data>
    <LinearLayout android:id="@+id/linearMeusdadosNOVA"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_gravity="start"
            android:layout_height="@dimen/_41pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="@dimen/_41pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft_green_900"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_green_900"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearFoto"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_width="wrap_content"
            android:orientation="vertical" style="@style/groupStylegreen_900cornerRadius">
            <ImageView android:id="@+id/imagePerfil"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_199pxh"
                android:layout_marginBottom="@dimen/_5pxv"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="@dimen/_199pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_perfil}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_perfil"/>
        </LinearLayout>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtAsenhaprecisa"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_76pxv"
            android:layout_width="match_parent"
            android:text="@{meusDadosNovaSenhaVM.meusDadosNovaSenhaModel.txtAsenhaprecisa}"
            style="@style/txtMontserratbold13" tools:text="@string/msg_a_senha_precisa"/>
        <TextView android:ellipsize="end" android:id="@+id/txtNovaSenha"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_68pxh"
            android:layout_marginStart="@dimen/_68pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{meusDadosNovaSenhaVM.meusDadosNovaSenhaModel.txtNovaSenha}"
            style="@style/txtMontserratsemibold12_4" tools:text="@string/lbl_nova_senha"/>
        <EditText
            android:background="@drawable/rectangle_bg_green_300_4c_radius_10"
            android:drawableEnd="@drawable/img_vector"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:hint="@string/lbl"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_12pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@={meusDadosNovaSenhaVM.meusDadosNovaSenhaModel.etPasswordValue}"
            android:textColorHint="@color/black_903"
            style="@style/etSolidRounded_5" tools:ignore="Autofill"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearEmail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="wrap_content"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtRepetirsenha"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{meusDadosNovaSenhaVM.meusDadosNovaSenhaModel.txtRepetirsenha}"
                style="@style/txtMontserratsemibold12" tools:text="@string/lbl_repetir_senha"/>
            <EditText
                android:background="@drawable/rectangle_bg_green_300_4c_radius_11"
                android:drawableEnd="@drawable/img_vector"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end" android:hint="@string/lbl"
                android:id="@+id/etPasswordOne"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_12pxh"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@={meusDadosNovaSenhaVM.meusDadosNovaSenhaModel.etPasswordOneValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRounded_6" tools:ignore="Autofill"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSalvar"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_45pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_63pxv"
            android:layout_width="@dimen/_200pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_salvar"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline_2" tools:text="@string/lbl_salvar"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnCancelar"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_45pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="@dimen/_200pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_cancelar"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline_3" tools:text="@string/lbl_cancelar"/>
    </LinearLayout>
</layout>
